# frequent-itemset-mining

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  main.cpp  vcpkg.json
benchmarks/: CMakeLists.txt  apriori_benchmark.cpp  benchmark.cpp  benchmark_main.cpp  eclat_benchmark.cpp  fp_growth_benchmark.cpp  relim_benchmark.cpp  utils.h
cli/: CMakeLists.txt  main.cpp
include/: algorithms.h  apriori.h  apriori_2.h  apriori_hash.h  apriori_hash_tree.h  config.h  counting.h  data.h  database.h  dtypes.h  eclat.h  fp_growth.h  fp_tree.h  hash_tree.h  igm_generator.h  item_counts.h  itemset.h  reader.h  relim.h  rules.h  utils.h  writer.h
src/: CMakeLists.txt  apriori.cpp  apriori.h  apriori_2.cpp  apriori_hash.cpp  apriori_hash_tree.cpp  counting.cpp  data.cpp  database.cpp  dtypes.cpp  eclat.cpp  fp_growth.cpp  fp_growth.h  fp_tree.cpp  hash_tree.cpp  item_counts.cpp  itemset.cpp  reader.cpp  relim.cpp  rules.cpp  utils.cpp  writer.cpp
src/cli/: CMakeLists.txt  main.cpp  types.h  utils.cpp
test/: CMakeLists.txt  apriori_2_tests.cpp  apriori_hash_tree_tests.cpp  apriori_tests.cpp  dtypes_tests.cpp  eclat_tests.cpp  fp_growth_tests.cpp  fp_tree_tests.cpp  hash_tree_tests.cpp  reader_tests.cpp  relim_tests.cpp  test_data.cpp  test_data.h  test_main.cpp  writer_tests.cpp
tests/: CMakeLists.txt  algorithm_tests.cpp  apriori_2_tests.cpp  apriori_hash_tests.cpp  apriori_hash_tree_tests.cpp  apriori_tests.cpp  data_tests.cpp  database_tests.cpp  dtypes_tests.cpp  eclat_tests.cpp  fp_growth_tests.cpp  fp_tree_tests.cpp  frequent_itemset_tests.cpp  hash_tree_tests.cpp  igm_generator_tests.cpp  item_counts_tests.cpp  itemset_tests.cpp  reader_tests.cpp  relim2_tests.cpp  relim_tests.cpp  rules_tests.cpp  test_data.cpp  test_data.h  test_main.cpp  test_utils.h  utils_tests.cpp  writer_tests.cpp
tests/data/: data_01.csv  result_01.csv  result_apriori_01.csv  result_eclat_01.csv  result_fp_growth_01.csv  result_relim_01.csv
tests/python/: apriori.py  create_data.py  run_apriori.py
